Fixed homepage background not covering scrolled areas

--- a/src/css/pages/home.scss
+++ b/src/css/pages/home.scss
@@ -1,6 +1,8 @@
 @import '../config.scss';
 
 #homePage {
+    display: block;
+    overflow: auto;
     height: 100%;
     background-color: darken($school-color, 7%);
 
